@@ -2416,13 +2416,16 @@ BEHAVIOR_WATERCURRENTS=\
 Behavior   : WaterCurrents\n\r\
 Targets    : Areas, Rooms\n\r\
 Parameters : min, max ticks, % chance, [DIRECTION] [DIRECTION] [etc..]\n\r\
+Parameters : ... INMSG="[INCOMING MSG]" OUTMSG="[OUTGOING MSG]"\n\r\
 Example    : min=1 max=3 chance=99 east south\n\r\
-Example    : east south\n\r\
+Example    : east south inmsg="<S-NAME> enter(s) from @x1."\n\r\
 Description: \n\r\
 The mob will be drawn along in the directions specified by the parameters.  If \
 an exit is available in the first direction, it will be chosen, otherwise \
 the second one, etc.  The min, max, and chance dictate how often the currents \
-will strike.
+will strike.  The INMSG and OUTMSG are the incoming and outgoing messages; you \
+can use <S-NAME> and <S-IS-ARE> codes for the object being swept, and @x1 for the \
+direction entering or leaving from/to.
 
 BEHAVIOR_WEATHERAFFECTS=\
 Behavior   : WeatherAffects\n\r\
